[gd_scene load_steps=62 format=2]

[ext_resource path="res://Assets/Enemies/AngryPig/Hit 1 (36x30).png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemies/AngryPig/Idle (36x30).png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemies/AngryPig/Run (36x30).png" type="Texture" id=3]
[ext_resource path="res://Assets/Enemies/AngryPig/Walk (36x30).png" type="Texture" id=4]
[ext_resource path="res://Assets/Enemies/AngryPig/AngryPig.gd" type="Script" id=5]
[ext_resource path="res://Assets/Enemies/AngryPig/Hit 2 (36x30).png" type="Texture" id=6]
[ext_resource path="res://Assets/Sounds/qubodup-cfork-ccby3-jump.ogg" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 12.5 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 36, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 72, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 108, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 180, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 216, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 252, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 36, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 108, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 36, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 72, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 108, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 180, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 216, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 252, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 324, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 360, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 396, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 36, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 72, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 108, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 144, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 108, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 36, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 72, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 108, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 144, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 180, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 216, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 252, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 288, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 324, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 360, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 396, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 432, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 468, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 504, 0, 36, 30 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 540, 0, 36, 30 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "appear",
"speed": 5.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 48 ), SubResource( 47 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ) ],
"loop": false,
"name": "hit",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=53]
extents = Vector2( 10, 1.5 )

[sub_resource type="RectangleShape2D" id=54]
extents = Vector2( 17, 10 )

[node name="AngryPig" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource( 5 )
motion = Vector2( -5, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.5 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )
animation = "idle"
playing = true

[node name="top_checker" type="Area2D" parent="."]
position = Vector2( 0, -12 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
shape = SubResource( 53 )

[node name="Side_bumper" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 19

[node name="CollisionShape2D" type="CollisionShape2D" parent="Side_bumper"]
position = Vector2( 0, 3 )
shape = SubResource( 54 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 1
stream = ExtResource( 7 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 29, 10 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="body_entered" from="Side_bumper" to="." method="_on_Side_bumper_body_entered"]
